--- a/css/upcomingRaces.css
+++ b/css/upcomingRaces.css
@@ -1,5 +1,12 @@
+.upcoming-races {
+  background-color: #f5e4e4a6;
+  border: 8px solid #f003;
+  border-radius: 10px;
+}
+
 .upcoming-races-container {
   padding: 16px;
+  padding-top: 0;
 }
 
 .upcoming-races-flex {
@@ -10,6 +17,8 @@
 }
 
 .upcoming-race {
+  cursor: pointer;
+  background-color: #ffffffd4;
   width: 100%;
   margin-top: 16px;
   padding: 8px 16px;
@@ -18,6 +27,8 @@
   align-items: center;
   justify-content: space-between;
   border: 1px solid green;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 @media (min-width: 600px) {
   .upcoming-race {
