--- a/css/hero.css
+++ b/css/hero.css
@@ -1,3 +1,17 @@
+.hero-container {
+  height: 20vh;
+  text-align: center;
+  background-color: #f5e4e4a6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 64px;
+}
+
+.logo {
+  max-height: 80%;
+}
+
 .hero-img {
   max-width: 100vw;
 }
