--- a/sass/hero.scss
+++ b/sass/hero.scss
@@ -1,10 +1,19 @@
 @import './helpers.scss';
 
 .hero-container {
-    // height: 100vh;
-    // width: 100vw;
-    // background: url(../images/hero.jpg);
-    // background-size: cover;
+    height: 20vh;
+    text-align: center;
+    background-color: $backgroundColor;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-bottom: spacing(8);
+}
+
+.logo {
+    max-height: 80%;
 }
 
 .hero-img {
