--- a/sass/upcomingRaces.scss
+++ b/sass/upcomingRaces.scss
@@ -1,7 +1,15 @@
 @import './helpers.scss';
 
+.upcoming-races {
+    background-color: $backgroundColor;
+
+    border: 8px solid #f003;
+    border-radius: 10px;
+}
+
 .upcoming-races-container {
     padding: spacing(2);
+    padding-top: 0;
 }
 
 .upcoming-races-flex {
@@ -12,6 +20,8 @@
 }
 
 .upcoming-race {
+    cursor: pointer;
+    background-color: #ffffffd4;
     width: 100%;
     margin-top: spacing(2);
     padding: spacing(1) spacing(2);
@@ -22,6 +32,8 @@
     justify-content: space-between;
     
     border: 1px solid green;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     
     @media (min-width:$tabletBreakpoint) {
         width: 40%;
