--- a/css/modal.css
+++ b/css/modal.css
@@ -1,7 +1,6 @@
 .modal {
   display: none;
   position: fixed;
-  padding-top: 50px;
   left: 0;
   top: 0;
   width: 100%;
@@ -10,7 +9,7 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.close-btn {
+.modal-close-btn {
   float: right;
   color: lightgray;
   font-size: 24px;
