--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -1,7 +1,8 @@
 .modal {
     display: none;
     position: fixed;
-    padding-top: 50px;
+    // padding: 50px;
+    // padding-top: 50px;
     left: 0; 
     top: 0;
     width: 100%;
@@ -10,11 +11,15 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.close-btn {
+.modal-close-btn {
     float: right; 
     color: lightgray; 
     font-size: 24px;  
     font-weight: bold;
 
     cursor: pointer;
-  }
+}
+
+.modal-content {
+    
+}
