--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,4 +1,5 @@
 @import './helpers.scss';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 .content {
     margin: 0px spacing(2);
@@ -20,6 +21,7 @@
 }
 
 body {
+    font-family: 'Open Sans';
     background: url(../images/hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
