--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 .content {
   margin: 0px 16px;
 }
@@ -19,6 +20,7 @@
 }
 
 body {
+  font-family: "Open Sans";
   background: url(../images/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
