--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -1,25 +1,57 @@
+@import './helpers.scss';
+
 .modal {
     display: none;
     position: fixed;
-    // padding: 50px;
-    // padding-top: 50px;
     left: 0; 
     top: 0;
     width: 100%;
     height: 100%; 
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #000000a1;
+}
+
+.modal-container {
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+    height: 80vh;
+    overflow: hidden;
+    text-align: center;
+
+    background-color: $backgroundColor;
+    border: 8px solid $formulaOneRed;
+    border-radius: 5px;
+
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
 }
 
 .modal-close-btn {
     float: right; 
-    color: lightgray; 
-    font-size: 24px;  
+    color: black; 
+    font-size: 44px;  
     font-weight: bold;
+
+    padding-right: spacing(2);
 
     cursor: pointer;
 }
 
 .modal-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-title {
+    text-transform: capitalize;
+}
+
+.modal-track-layout {
+    max-height: 80%;
+    max-width: 100%;
     
 }
