--- a/sass/components/upcomingRaces.scss
+++ b/sass/components/upcomingRaces.scss
@@ -1,5 +1,3 @@
-// @import './helpers.scss';
-
 .upcoming-races {
     background-color: $backgroundColor;
 
@@ -35,16 +33,7 @@
     border-top-left-radius: 10px;
     border-bottom-right-radius: 10px;
     
-    @media (min-width:$tabletBreakpoint) {
+    @include respond-to('tablet') {
         width: 40%;
     }
-
-
-    // & h4 {
-    //     margin: 0 spacing(2);
-    // }
-
-    // & p {
-    //     margin: 0 spacing(2);
-    // }
 }
