--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './base/typography.scss';
 
 @import './layout/content';
+@import './layout/flex-row';
 
 @import './components/hero.scss';
 @import './components/modal.scss';
