--- a/sass/components/modal.scss
+++ b/sass/components/modal.scss
@@ -9,13 +9,14 @@
 }
 
 .modal-container {
+    position: relative;
     margin-top: 10vh;
     margin-bottom: 10vh;
     height: 80vh;
     overflow: hidden;
     text-align: center;
 
-    background-color: $backgroundColor;
+    background-color: white;
     border: 8px solid $formulaOneRed;
     border-radius: 5px;
 
@@ -29,7 +30,8 @@
 }
 
 .modal-close-btn {
-    float: right; 
+    position: absolute;
+    right: 0; 
     color: black; 
     font-size: 44px;  
     font-weight: bold;
@@ -42,6 +44,7 @@
 .modal-content {
     display: flex;
     flex-direction: column;
+    margin: spacing(2);
 }
 
 .modal-title {
@@ -49,7 +52,22 @@
 }
 
 .modal-track-layout {
+    margin-top: spacing(2);
     max-height: 80%;
-    max-width: 100%;
+    max-width: 65%;
     
+}
+
+.modal-track-layout-info {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+    & p {
+        margin-top: spacing(2);
+    }
+}
+
+.modal-track-info {
+    margin-top: spacing(2);
 }
