feat: Add webpack and refactor

--- a/sass/components/modal.scss
+++ b/sass/components/modal.scss
@@ -17,7 +17,7 @@
     text-align: center;
 
     background-color: white;
-    border: 8px solid $formulaOneRed;
+    border: 8px solid #a90100;
     border-radius: 5px;
 
     animation-name: animatetop;
