--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -1,6 +1,7 @@
 body {
     font-family: $font-family;
-    background: url(../images/hero.jpg);
+    // background: url(../../images/hero.jpg);
+    background: url("/images/hero.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
