--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,5 +11,6 @@
 @import './components/hero.scss';
 @import './components/modal.scss';
 @import './components/upcomingRaces.scss';
+@import './components/articles.scss';
 
 @import './pages/index.scss';
