--- a/sass/components/modal.scss
+++ b/sass/components/modal.scss
@@ -63,6 +63,11 @@
     flex-direction: column;
     align-items: start;
 
+    background-color: #e9e9e9;
+    border-radius: 1.5em;
+    padding: spacing(3) spacing(2);
+
+    text-align: initial;
     & p {
         margin-top: spacing(2);
     }
