--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -1,7 +1,8 @@
 body {
     font-family: $font-family;
     // background: url(../../images/hero.jpg);
-    background: url("/images/hero.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    // background: url("/images/hero.jpg");
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    background: #f8f8f8;
 }
