--- a/sass/components/articles.scss
+++ b/sass/components/articles.scss
@@ -1,28 +1,59 @@
 .articles {
     margin-top: spacing(8);
     margin-bottom: spacing(8);
-    padding: 0 spacing(8);
+    padding: 0 spacing(4);
 
     & h2 {
         text-align: center;
         margin-bottom: spacing(4);
     }
+
+    @include respond-to('desktop') {
+        padding: 0 spacing(8);
+    }
+}
+
+.stories {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: spacing(-4);
 }
 
 .story {
     border: 2px solid #b90000;
     border-radius: 4px;
-    // padding: spacing(2);
-    width: 40%;
+    margin-top: spacing(4);
+    width: 100%;
     overflow: hidden;
+
+    @include respond-to('tablet') {
+        width: 45%;
+    }
+
+    @include respond-to('desktop') {
+        width: 40%;
+    }
 
     & img {
         width: 110%;
         position: relative;
+        transition: transform 1s;
+        z-index: -1;
+    }
+
+
+    &:hover {
+        cursor: pointer;
+        & img {
+            transform: scale(1.3);
+        }
     }
 }
 
 .story-content {
+    background-color: $pageColor;
     padding: spacing(2);
     & h4 {
         font-weight: lighter;
