--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -1,8 +1,4 @@
 body {
     font-family: $font-family;
-    // background: url(../../images/hero.jpg);
-    // background: url("/images/hero.jpg");
-    // background-size: cover;
-    // background-repeat: no-repeat;
-    background: #f8f8f8;
+    background: $pageColor;
 }
