--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 *, h1, h2, h3, h4, h5, h6, p {
   margin: 0;
+  box-sizing: border-box;
 }
 
 .content {
@@ -27,6 +28,15 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.hero {
+  background: url("/images/hero.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-bottom: 64px;
+  border-bottom: 16px solid #b90000;
 }
 
 .hero-container {
@@ -70,7 +80,7 @@
   overflow: hidden;
   text-align: center;
   background-color: white;
-  border: 8px solid #e20403;
+  border: 8px solid #a90100;
   border-radius: 5px;
   animation-name: animatetop;
   animation-duration: 0.4s;
@@ -116,6 +126,10 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  background-color: #e9e9e9;
+  border-radius: 1.5em;
+  padding: 24px 16px;
+  text-align: initial;
 }
 .modal-track-layout-info p {
   margin-top: 16px;
@@ -129,6 +143,7 @@
   background-color: #f5e4e4a6;
   border: 8px solid #f003;
   border-radius: 10px;
+  margin-bottom: 64px;
 }
 
 .upcoming-races-container {
@@ -163,11 +178,72 @@
   }
 }
 
+.articles {
+  margin-top: 64px;
+  margin-bottom: 64px;
+  padding: 0 32px;
+}
+.articles h2 {
+  text-align: center;
+  margin-bottom: 32px;
+}
+@media (min-width: 1025px) {
+  .articles {
+    padding: 0 64px;
+  }
+}
+
+.stories {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: -32px;
+}
+
+.story {
+  border: 2px solid #b90000;
+  border-radius: 4px;
+  margin-top: 32px;
+  width: 100%;
+  overflow: hidden;
+}
+@media (min-width: 600px) {
+  .story {
+    width: 45%;
+  }
+}
+@media (min-width: 1025px) {
+  .story {
+    width: 40%;
+  }
+}
+.story img {
+  width: 110%;
+  position: relative;
+  transition: transform 1s;
+  z-index: -1;
+}
+.story:hover {
+  cursor: pointer;
+}
+.story:hover img {
+  transform: scale(1.3);
+}
+
+.story-content {
+  background-color: #f8f8f8;
+  padding: 16px;
+}
+.story-content h4 {
+  font-weight: lighter;
+  color: red;
+  margin-bottom: 8px;
+}
+
 body {
   font-family: "Open Sans";
-  background: url(../images/hero.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: #f8f8f8;
 }
 
 /*# sourceMappingURL=main.css.map */
